--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,10 +8,10 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+          <a class="nav-link {=$highlight-act}" href="./1-gallery.html">Page 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+          <a class="nav-link {=$highlight-curr}" href="./2-form.html">Page 2</a>
         </li>
       </ul>
     </nav>
